# my_drf

./: pyproject.toml
mysite/accounts/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
mysite/accounts/migrations/: 0001_initial.py  0002_rename_transaction_transactions.py  0003_remove_accounts_valid_currency_fccounts_and_more.py
mysite/deposits/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
mysite/deposits/migrations/: 0001_initial.py  0002_alter_depositproducts_duration_and_more.py  0003_auto_20230218_1845.py  0004_alter_deposits_ends_at_alter_deposits_status_and_more.py  0005_remove_depositproducts_valid_currency_and_more.py  0006_rename_deposit_product_id_deposits_deposit_product_and_more.py
mysite/mysite/: settings.py  urls.py
mysite/users/: models.py
